teams/kernel/security-iam-svc/k8s/logto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto
  namespace: logto
  labels:
    app.kubernetes.io/name: logto
    app.kubernetes.io/part-of: security-iam-svc
spec:
  selector:
    app: logto
  ports:
    - name: app
      port: 3001
      targetPort: 3001
      protocol: TCP
    - name: admin
      port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
