teams/kernel/security-iam-svc/k8s/logto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logto
  namespace: logto
  labels:
    app.kubernetes.io/name: logto
    app.kubernetes.io/part-of: security-iam-svc
  annotations:
    kubernetes.io/ingress.global-static-ip-name: logto-ip
    networking.gke.io/managed-certificates: logto-cert
spec:
  rules:
    - host: logto.example.com # Replaced by Terraform with logto.{domain_name}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logto
                port:
                  number: 3001
    - host: logto-admin.example.com # Replaced by Terraform with logto-admin.{domain_name}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logto
                port:
                  number: 3002
